section8/lecture44/pod-https.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-https
  labels:
    app: https
spec:
  containers:
    - name: container
      image: kubetm/app

---
apiVersion: v1
kind: Service
metadata:
  name: svc-https
spec:
  selector:
    app: https
  ports:
    - port: 8080
      targetPort: 8080
