section8/lecture44/pod-v2.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-v2
  labels:
    app: v2
spec:
  containers:
    - name: container
      image: kubetm/app:v2

---
apiVersion: v1
kind: Service
metadata:
  name: svc-v2
spec:
  selector:
    app: v2
  ports:
    - port: 8080
      targetPort: 8080
