section8/lecture44/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app
spec:
  rules:
    - host: www.app.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: svc-v1
                port:
                  number: 8080
