section8/lecture44/canary-v2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: canary-v2
  annotations:
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "10"
spec:
  rules:
    - host: www.app.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: svc-v2
                port:
                  number: 8080
