section8/lecture44/ingress-ssl.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: https
spec:
  tls:
    - hosts:
        - www.https.com
      secretName: secret-https
  rules:
    - host: www.https.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: svc-https
                port:
                  number: 8080
