section8/lecture44/service-loadbalancing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: service-loadbalancing
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: svc-shopping
                port:
                  number: 8080
          - path: /customer
            pathType: Prefix
            backend:
              service:
                name: svc-customer
                port:
                  number: 8080
          - path: /order
            pathType: Prefix
            backend:
              service:
                name: svc-order
                port:
                  number: 8080
